Put the plugin ID under a namespace

--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ pluginBundle {
 
 	plugins {
 		ktSyntastic {
-			id = "ktsyntastic"
+			id = "com.fagyapong.ktsyntastic"
 			displayName = "Kotlinc Syntastic Plugin"
 		}
 	}
